--- a/pagina02.html
+++ b/pagina02.html
@@ -20,7 +20,7 @@
 
 <h1> Palácio Branco </h1>
 
-<img src="imagens/palacio1.jpeg" width="300" height="170"> <img src="imagens/palacio2.jpeg" width="300" height="170"> <img src="imagens/palacio3.jpeg" width="300" height="170"> <img src="imagens/palacio4.jpeg" width="300" height="170">
+<img src="palacio1.jpeg" width="300" height="170"> <img src="palacio2.jpeg" width="300" height="170"> <img src="palacio3.jpeg" width="300" height="170"> <img src="palacio4.jpeg" width="300" height="170">
 
 <p> Originalmente localizado na Bacia Antiga, o Palácio Branco era onde o Rei Pálido governava Hallownest. Os Royal Retainers eram servos do Rei que serviam no palácio, enquanto os Kingsmoulds eram guardas feitos pelo Rei Pálido com o Vazio em sua Oficina. Hollow Knight foi a criação perfeita antes de ser selado no Ovo Negro. Após o retorno da infecção em Hallownest, o Rei Pálido foge e leva o pálacio consigo, desaparecendo completamente.</p>
 
