--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title> A Genialidade Por Tras de Hollow Knight </title>
 
-<link rel="icon" href="imagens/icon.png" type="image/x-icon">
+<link rel="icon" href="icon.png" type="image/x-icon">
     
 </head>
 
