--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     
 </head>
 
-<frameset cols="10%,90%" border="1" frameborder="yes" noresize>
+<frameset cols="15%,85%" border="1" border-color="darkgray" frameborder="yes" noresize>
 
-<frame src="links.html">
+<frame src="links.html" scrolling="no">
 
 <frame src="pagina01.html" name="site">
 
