--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 </head>
 
-<frameset cols="15%,85%" border="1" border-color="darkgray" frameborder="yes" noresize>
+<frameset cols="15%,85%" border="0" frameborder="yes" noresize>
 
 <frame src="links.html" scrolling="no">
 
