--- a/pagina04.html
+++ b/pagina04.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<img src="radiance01.jpg" width="1215">
+<img src="radiance01.jpg" width="1100" aligm="center">
 
 <br>
 
@@ -18,7 +18,7 @@
 
 <br> <br>
 
-<img src="hallownest02.jpg" width="1215">
+<img src="hallownest02.jpg" width="1100" align="center">
 
 <h1> O Início do Reinado do Rei Pálido </h1>
 
@@ -26,7 +26,7 @@
 
 <br> <br>
 
-<img src="hallownest.png" width="1215">
+<img src="hallownest.png" width="1100" align="center">
 
 <h1> O Declínio de Hallownest e o Início da Jornada </h1>
 
