--- a/pagina03.html
+++ b/pagina03.html
@@ -8,7 +8,7 @@
 
 <body link="#006d78" alink="#c6cbcb" vlink="#006d78">
 
-<img src="cenario.png" width="1215">
+<img src="cenario.png" width="1100" align="center">
 
 <br>
 
